# cpp-checker

./: .gitignore  README.md  bench_report.ps1  bench_report.py  bench_report.sh  build.ps1  build.py  build.sh  certify_suite.py  find_breakpoint.py  gate.ps1  gate.sh  gate_boj3s.ps1  gate_boj3s.sh  gen_case.py  hunt.ps1  hunt.sh  hunt_hardest.py  local_execution_prompt_ko.txt  run_case.ps1  run_case.py  run_case.sh  solve.cpp  stress_modes.ps1  stress_modes.py  stress_modes.sh  suite_utils.py  validator.py
branch_1/ogdf_local_harness_bundle/: CMakeLists.txt
branch_1/ogdf_local_harness_bundle/cmake/: DetectOGDFFeatures.cmake
branch_1/ogdf_local_harness_bundle/docs/: failure_bundle_reading_example_ko.md  integration_notes_ko.md  next_steps_ko.md  ogdf_wrapper_fill_checklist_ko.md
branch_1/ogdf_local_harness_bundle/scripts/: run_static_then_dummy.sh
branch_2-1/raw_engine_v1_deliverables_20260306_234316/raw_engine_v1_package/tests/: CMakeLists.txt  raw_engine_cases.cpp  raw_engine_main.cpp  reference_model.cpp  reference_model.hpp  reference_oracle_cases.cpp  state_dump.cpp  state_dump.hpp  test_harness.hpp
branch_2-1/raw_engine_v1_failure_sig_deliverables_20260307_010852/raw_engine_v1_package/tests/: CMakeLists.txt  failure_signature.cpp  planner_oracle_cases.cpp  raw_engine_cases.cpp  raw_engine_main.cpp  reference_oracle_cases.cpp  reference_planner.cpp  reference_planner.hpp  state_dump.cpp  test_harness.hpp
branch_2-1/raw_engine_v1_package/: CMakeLists.txt  PHASE10_STABILIZATION_REPORT_20260308.txt  PHASE11_STABILIZATION_REPORT_20260308.txt  PHASE12_STABILIZATION_REPORT_20260309.txt  PHASE13_STABILIZATION_REPORT_20260309.txt  PHASE14_STABILIZATION_REPORT_20260310.txt  PHASE15_STABILIZATION_REPORT_20260310.txt  PHASE16_STABILIZATION_REPORT_20260319 2.txt  PHASE16_STABILIZATION_REPORT_20260319.txt  PHASE17_STABILIZATION_REPORT_20260319.txt  PHASE18_STABILIZATION_REPORT_20260319.txt  README.md  raw_engine_v1_debug
branch_2-1/raw_engine_v1_package/artifacts/corpus/: corpus_manifest_v1.txt
branch_2-1/raw_engine_v1_package/artifacts/logs/: seed850001_random.json  seed850001_random.summary.txt  seed850004_targeted.json  seed850005_structural.json
branch_2-1/raw_engine_v1_package/artifacts/manifests/: policy_gate.json  policy_gate.txt  policy_graduation_manifest_v1.summary.txt
branch_2-1/raw_engine_v1_package/artifacts/phase16_verification/: verification_summary_20260319.txt
branch_2-1/raw_engine_v1_package/artifacts/phase18_evidence_bundle/: bundle_metadata 2.json  bundle_metadata.json
branch_2-1/raw_engine_v1_package/build-asan-isolated/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
branch_2-1/raw_engine_v1_package/build-asan-isolated/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
branch_2-1/raw_engine_v1_package/build-asan-isolated/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
branch_2-1/raw_engine_v1_package/build-asan-phase16/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
branch_2-1/raw_engine_v1_package/build-asan-phase16-final/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
branch_2-1/raw_engine_v1_package/build-asan-phase16b/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
branch_2-1/raw_engine_v1_package/build-asan-phase17/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
branch_2-1/raw_engine_v1_package/build-asan-phase18/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
branch_2-1/raw_engine_v1_package/build-debug-phase16-final/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
branch_2-1/raw_engine_v1_package/build-debug-phase18/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
branch_2-1/raw_engine_v1_package/build-release-phase18/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
branch_2-1/raw_engine_v1_package/phase16_bundle_r2/: README.md
branch_2-1/raw_engine_v1_package/phase16_deliverables_20260319_bundle/: PHASE16_STABILIZATION_REPORT_20260319.txt
branch_2-1/raw_engine_v1_package/phase17_stabilization_bundle_20260319/: CMakeLists.txt  README.md  compare_ready_lineage.hpp  family_applicability_audit.hpp  phase17_automorphism_compare.txt  raw_engine_cases.cpp  raw_engine_main.cpp  split_choice_oracle.cpp  test_harness.hpp
branch_2-1/raw_engine_v1_package/raw_engine_phase16_deliverables_20260319_bundle/: PHASE16_STABILIZATION_REPORT_20260319.txt
branch_2-1/raw_engine_v1_package/src/: raw_core.cpp  raw_planner.cpp  raw_primitives.cpp  raw_validators.cpp
branch_2-1/raw_engine_v1_package/tests/: CMakeLists.txt  compare_ready_lineage.cpp  exact_canonicalizer.cpp  exact_canonicalizer.hpp  exhaustive_cases.cpp  exhaustive_cases.hpp  exhaustive_generator.cpp  exhaustive_generator.hpp  failure_signature.cpp  family_applicability_audit.cpp  metamorphic_cases.cpp  multiclass_catalog.cpp  multiclass_catalog.hpp  planner_oracle_cases.cpp  raw_engine_cases.cpp  raw_engine_main.cpp  reference_model.cpp  reference_oracle_cases.cpp  reference_planner.cpp  reference_planner.hpp  split_choice_cases.cpp  split_choice_oracle.hpp  stabilization_support.cpp  stabilization_support.hpp  state_dump.cpp  state_dump.hpp  test_harness.hpp
ogdf_local_harness_bundle_v2/: CMakeLists.txt
ogdf_local_harness_bundle_v2/collected_outputs/: MANIFEST.txt
ogdf_local_harness_bundle_v2/docs/: feedback_response_ko.md  integration_notes_ko.md
ogdf_local_harness_bundle_v2/dumps/first_failure_static/: RAW_VALIDATE_FAIL_seed1_tc0.txt
ogdf_local_harness_bundle_v2/execution_outputs_lt20/: RAW_BACKEND_FAIL_seed1_tc0_sample.txt
ogdf_local_harness_bundle_v2/include/: ogdf_feature_config.hpp.in
ogdf_local_harness_bundle_v2/include/harness/: ogdf_wrapper.hpp  project_hooks.hpp  types.hpp
ogdf_local_harness_bundle_v2/prompts/: local_execution_prompt_ko.txt
ogdf_local_harness_bundle_v2/scripts/: install_ogdf_local.sh
ogdf_local_harness_bundle_v2/src/: ogdf_wrapper.cpp  rewrite_r_harness_main.cpp  runners.cpp
(+5822 files in other folders)
